--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <title>Todo List AngularJS App</title>
 
   <link rel="stylesheet" href="app.css">
+  <link href='https://fonts.googleapis.com/css?family=Stardos+Stencil|Khula' rel='stylesheet' type='text/css'>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 
 </head>
@@ -14,7 +15,7 @@
   <h1>To Do List </h1>
     <div ng-controller="ListCtrl">
 
-      <h2>You have {{ (items | filter: {status:false}).length }} chores left to do!</h2>
+      <h2>You have {{ (items | filter: {status:false}).length }} chore(s) left to do!</h2>
 
       <ul>
         <li ng-repeat="item in items | orderBy: 'status'">
@@ -24,7 +25,7 @@
       </ul>
 
       <form>
-        <input type="text" placeholder="add a chore" ng-model="newChore">
+        <input type="text" placeholder="Enter a Chore" ng-model="newChore">
         <button ng-click="addChore()">Add</button>
       </form>
 
