--- a/app/index.html
+++ b/app/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 
-  <h1>To Do List </h1>
+  <h1 class="center font">To Do List </h1>
     <div ng-controller="ListCtrl">
 
-      <h2>You have {{ (items | filter: {status:false}).length }} chore(s) left to do!</h2>
+      <h2 class="font">You have {{ (items | filter: {status:false}).length }} chore(s) left to do!</h2>
 
       <ul>
         <li ng-repeat="item in items | orderBy: 'status'">
@@ -24,7 +24,7 @@
         </li>
       </ul>
 
-      <form>
+      <form class="center">
         <input type="text" placeholder="Enter a Chore" ng-model="newChore">
         <button ng-click="addChore()">Add</button>
       </form>
