edit readme.md file

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
           <span class="status_{{item.status}}">{{ item.chore }}</span>
           <!-- directive for deleting on click-->
           <!-- add bootstrap for icon -->
-          <i class="fa fa-times" ng-click="deleteChore(item)">
+          <i class="fa fa-times delete" ng-click="deleteChore(item)">
             <a></a>
           </i>
 
